# thermal-edge

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: inference_bench.py
drivers/thermal_i2c/: Makefile  thermal_i2c.c
inference/: tflite_engine.cpp  tflite_engine.hpp
pipeline/: thermal_guardian.cpp
tests/: test_inference.cpp
